Fix vertical alignment of Transfer amount model
It moves model from top alignment to center alignment

--- a/src/client/wallet/Transfer.less
+++ b/src/client/wallet/Transfer.less
@@ -54,6 +54,14 @@
         .ant-input-group-addon {
           text-align: right;
           width: 160px !important;
+          position: relative;
+        }
+
+        .ant-radio-group {
+          position: relative;
+          top: 50%;
+          -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
         }
       }
     }
